fixed misalignment of the left sidebar in several browsers

--- a/sourcefiles/modern/css/style.css
+++ b/sourcefiles/modern/css/style.css
@@ -5659,7 +5659,6 @@ fieldset[disabled] .form-control {
 	display: inline-block;
 	height: calc(100vh - 70px);
 	position: fixed;
-	top: 80px;
 	left: 0;
 	-webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 	-moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
